@@ -410,9 +410,17 @@ d:199.0.154.0/24:Don't D line ais.net:
 # klines placed on this server will be forwarded to the servers named
 # in the U lines here. LOCOPS will also be forwarded, but will appear
 # as "SLOCOPS" instead of "LOCOPS"
+#
+# i.e. irc_hub.somewhere.net has leaf servers irc1.somewhere.net 
+# irc2.somewhere.net
 
-U:another.server.net:
-U:irc2.server.net
+# Hub server would have
+U:irc1.somewhere.net:
+U:irc2.somewhere.net
+
+# each client server would have
+U:irc_hub.somewhere.net
+
 
 #
 #
